--- a/Responsive.css
+++ b/Responsive.css
@@ -78,10 +78,10 @@
         padding: 1rem;
     }
 
-    .skills-list {
+  /*  .skills-list {
         flex-direction: column;
         align-items: center;
-    }
+    }*/
 
     .contact-info a {
         font-size: 1rem;
